@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false
title Class Diagram - Forgot Password and Reset Password

class "ForgotPasswordServlet" as ForgotPasswordServlet_0 {
  +doGet()
  +doPost()
  +buildResetLink()
}

class "ResetPasswordServlet" as ResetPasswordServlet_1 {
  +doGet()
  +doPost()
}

class "UserService" as UserService_2 {
  +getUserByEmail()
  +createPasswordResetToken()
  +isValidResetToken()
  +resetPasswordByToken()
}

class "UserDao" as UserDao_3 {
  +savePasswordResetToken()
  +getValidUserIdByToken()
  +updatePasswordByUserId()
  +markTokenUsed()
}

class "EmailUtil" as EmailUtil_4 {
  +sendForgotPasswordEmail()
}

class "PasswordUtil" as PasswordUtil_5 {
  +sha256()
}

ForgotPasswordServlet_0 --> UserService_2 : create and validate reset flow
ForgotPasswordServlet_0 --> EmailUtil_4 : send reset email
ResetPasswordServlet_1 --> UserService_2 : validate token and reset
UserService_2 --> UserDao_3 : token and password persistence
UserService_2 --> PasswordUtil_5 : hash new password
@enduml
